# bevy_new_minimal

./: Cargo.toml  README.md  cargo-generate.toml  post-generate.rhai
.github/workflows/: ci-generate.yaml
scripts/: post-generation.rhai
src/: main.rs.template
